--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
 }
 
 .left{
